--- a/mangseng/mangseng.html
+++ b/mangseng/mangseng.html
@@ -32,7 +32,7 @@
 		<div class="banner"></div>
 		<div class="nav">
 			<ul>
-				<li><a href="盲僧主页.html">主页</a></li>
+				<li><a href="mangseng.html">主页</a></li>
 				<li><a href="html/技巧.html">技巧</a></li>
 				<li><a href="html/技能.html">技能</a></li>
 				<li><a href="html/排行榜.html">排行榜</a></li>
