--- a/mangseng/html/技巧.html
+++ b/mangseng/html/技巧.html
@@ -60,7 +60,7 @@
     		<div class="header"></div>
 			<div class="nav">
 				<ul>
-					<li><a href="../盲僧主页.html">主页</a></li>
+					<li><a href="../mangseng.html">主页</a></li>
 					<li><a href="技巧.html">技巧</a></li>
 					<li><a href="技能.html">技能</a></li>
 					<li><a href="排行榜.html">排行榜</a></li>
