--- a/mangseng/html/排行榜.html
+++ b/mangseng/html/排行榜.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="zh-CN">
+<!DOCTYPE html>
+<html lang="zh-cn">
 <head>
+<meta charset="UTF-8">
 <title>排行榜</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="description" content="布尔教育 http://www.itbool.com" />
@@ -56,7 +57,7 @@
     		<div class="header"></div>
 			<div class="nav">
 				<ul>
-					<li><a href="../盲僧主页.html">主页</a></li>
+					<li><a href="../mangseng.html">主页</a></li>
 					<li><a href="技巧.html">技巧</a></li>
 					<li><a href="技能.html">技能</a></li>
 					<li><a href="排行榜.html">排行榜</a></li>
